--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
